Ajustes excel +  integración procesos contractuales liquidación

--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-novedades-aprobadas/components/ver-detalle-tramite/ver-detalle-tramite.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-novedades-aprobadas/components/ver-detalle-tramite/ver-detalle-tramite.component.html
@@ -17,6 +17,12 @@
     <mat-card-content>
       <p>
         <strong>
+          Número del contrato:
+        </strong>
+        {{ novedad?.contrato?.numeroContrato }}
+      </p>
+      <p>
+        <strong>
           Fecha de solicitud:
         </strong>
         {{ novedad.fechaSolictud | date: 'dd/MM/yyyy' }}
