--- a/asivamosffie.web/asivamosffie/src/app/_pages/validar-solicitud-novedades/components/validar-novedad-contrato-obra/validar-novedad-contrato-obra.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/validar-solicitud-novedades/components/validar-novedad-contrato-obra/validar-novedad-contrato-obra.component.html
@@ -21,6 +21,10 @@
     </mat-card-header>
     <mat-card-content>
       <p>
+        <strong> Número del contrato: </strong>
+        {{ novedad?.contrato.numeroContrato }}
+      </p>
+      <p>
         <strong> Nombre del contratista: </strong>
         {{ novedad.contrato.contratacion.contratista.nombre }}
       </p>
@@ -42,7 +46,7 @@
       </p>
       <p>
         <strong>Valor del contrato:</strong>
-        <span>{{ (novedad.contrato?.contratacion?.disponibilidadPresupuestal?.length > 0 ? 
+        <span>{{ (novedad.contrato?.contratacion?.disponibilidadPresupuestal?.length > 0 ?
           novedad.contrato?.contratacion?.disponibilidadPresupuestal[0]?.valorSolicitud : 0 ) | currency: '':'symbol':'3.0' }}</span>
       </p>
       <p>
@@ -193,7 +197,7 @@
                 <strong *ngIf="descripcion.tipoNovedadCodigo == '1'">Fecha final de la suspensión: </strong>
                 <strong *ngIf="descripcion.tipoNovedadCodigo == '2'">Fecha final de la prórroga a las suspensión: </strong>
                 <strong *ngIf="descripcion.tipoNovedadCodigo == '6'">Fecha final del reinicio: </strong>
-                {{ descripcion.fechaFinSuspension | date: 'dd/MM/yyyy' }} 
+                {{ descripcion.fechaFinSuspension | date: 'dd/MM/yyyy' }}
               </p>
 
               <p *ngIf="descripcion.tipoNovedadCodigo == '3'">
@@ -203,7 +207,7 @@
 
               <section *ngIf="descripcion.tipoNovedadCodigo === '5'">
                 <section *ngFor="let clausula of descripcion?.novedadContractualClausula; let i = index">
-                  <mat-card-title class="header-card--text sub-text"> 
+                  <mat-card-title class="header-card--text sub-text">
                     Cláusula {{ i + 1 }}
                   </mat-card-title>
                   <p><strong>Cláusula a modificar: </strong></p>
