--- a/asivamosffie.web/asivamosffie/src/app/_pages/verificar-solicitud-de-novedades/components/ver-detalle-interventoria/ver-detalle-interventoria.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/verificar-solicitud-de-novedades/components/ver-detalle-interventoria/ver-detalle-interventoria.component.html
@@ -17,6 +17,10 @@
     </mat-card-header>
     <mat-card-content>
       <p>
+        <strong> Número de contrato : </strong>
+        {{ novedad?.contrato?.numeroContrato }}
+      </p>
+      <p>
         <strong> Nombre del contratista: </strong>
         {{ novedad.contrato.contratacion.contratista.nombre }}
       </p>
@@ -38,7 +42,7 @@
       </p>
       <p>
         <strong>Valor del contrato:</strong>
-        <span>{{ (novedad.contrato?.contratacion?.disponibilidadPresupuestal?.length > 0 ? 
+        <span>{{ (novedad.contrato?.contratacion?.disponibilidadPresupuestal?.length > 0 ?
           novedad.contrato?.contratacion?.disponibilidadPresupuestal[0]?.valorSolicitud : 0 ) | currency: '':'symbol':'3.0' }}</span>
       </p>
       <p>
