--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-novedades-aprobadas/components/registrar-revision-juridica/registrar-revision-juridica.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-novedades-aprobadas/components/registrar-revision-juridica/registrar-revision-juridica.component.html
@@ -23,6 +23,12 @@
     <mat-card-content>
       <p>
         <strong>
+          Número del contrato:
+        </strong>
+        {{ novedad?.contrato?.numeroContrato }}
+      </p>
+      <p>
+        <strong>
           Fecha de solicitud:
         </strong>
         {{ novedad.fechaSolictud | date: 'dd/MM/yyyy' }}
