--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-solicitud-novedad-contractual/components/registrar-solicitud/registrar-solicitud.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-solicitud-novedad-contractual/components/registrar-solicitud/registrar-solicitud.component.html
@@ -92,7 +92,7 @@
     </app-tabla-proyectos-registrar-novedad>
   </div>
 
-  <mat-card class="shipping-card var-main-gris animatedDown" *ngIf="novedadAplicada.value !== undefined && contrato">
+  <mat-card class="shipping-card var-main-gris animatedDown" *ngIf="novedadAplicada.value !== undefined && novedadAplicada.value !== null && contrato">
     <mat-card-header class="header-card header-card--margin">
       <mat-card-title class="header-card--text"> Datos del contrato </mat-card-title>
     </mat-card-header>
@@ -117,18 +117,18 @@
       </p> -->
       <p>
         <strong>Valor del contrato:</strong>
-        {{ (contrato?.contratacion?.disponibilidadPresupuestal?.length > 0 ? 
+        {{ (contrato?.contratacion?.disponibilidadPresupuestal?.length > 0 ?
             contrato?.contratacion?.disponibilidadPresupuestal[0]?.valorSolicitud : 0 ) | currency: '':'symbol':'3.0' }}
       </p>
       <p>
         <strong>Plazo:</strong>
         {{
-            contrato?.contratacion?.disponibilidadPresupuestal?.length > 0 ? 
+            contrato?.contratacion?.disponibilidadPresupuestal?.length > 0 ?
             (contrato?.contratacion?.disponibilidadPresupuestal[0]?.plazoMeses) : 0
         }}
         meses /
         {{
-            contrato?.contratacion?.disponibilidadPresupuestal?.length > 0 ? 
+            contrato?.contratacion?.disponibilidadPresupuestal?.length > 0 ?
             (contrato?.contratacion?.disponibilidadPresupuestal[0]?.plazoDias) : 0
         }}
         días
@@ -174,9 +174,9 @@
     </mat-card-content>
   </mat-card>
 
-  <div class="animatedDown" 
+  <div class="animatedDown"
         *ngIf="(novedadAplicada.value == true && contrato) || ( novedadAplicada.value == false && proyecto)">
-    
+
         <app-expansion-panel
                             [proyecto]=proyecto
                             [contrato]=contrato
