--- a/asivamosffie.web/asivamosffie/src/app/_pages/validar-solicitud-novedades/components/validar-novedad-contrato-interventoria/validar-novedad-contrato-interventoria.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/validar-solicitud-novedades/components/validar-novedad-contrato-interventoria/validar-novedad-contrato-interventoria.component.html
@@ -11,7 +11,6 @@
       solicitud de novedad {{ novedad.numeroSolicitud }}
     </h1>
     <p class="info-sub-title">
-      Número de contrato
       <b>
         Número de contrato <b>{{ novedad.contrato.numeroContrato }}</b>
       </b>
@@ -23,6 +22,10 @@
       <mat-card-title class="header-card--text"> Datos del contrato </mat-card-title>
     </mat-card-header>
     <mat-card-content>
+      <p>
+        <strong> Número del contrato: </strong>
+        {{ novedad?.contrato.numeroContrato }}
+      </p>
       <p>
         <strong> Nombre del contratista: </strong>
         {{ novedad.contrato.contratacion.contratista.nombre }}
@@ -45,7 +48,7 @@
       </p>
       <p>
         <strong>Valor del contrato:</strong>
-        <span>{{ (novedad.contrato?.contratacion?.disponibilidadPresupuestal?.length > 0 ? 
+        <span>{{ (novedad.contrato?.contratacion?.disponibilidadPresupuestal?.length > 0 ?
           novedad.contrato?.contratacion?.disponibilidadPresupuestal[0]?.valorSolicitud : 0 ) | currency: '':'symbol':'3.0' }}</span>
       </p>
       <p>
@@ -196,7 +199,7 @@
                 <strong *ngIf="descripcion.tipoNovedadCodigo == '1'">Fecha final de la suspensión: </strong>
                 <strong *ngIf="descripcion.tipoNovedadCodigo == '2'">Fecha final de la prórroga a las suspensión: </strong>
                 <strong *ngIf="descripcion.tipoNovedadCodigo == '6'">Fecha final del reinicio: </strong>
-                {{ descripcion.fechaFinSuspension | date: 'dd/MM/yyyy' }} 
+                {{ descripcion.fechaFinSuspension | date: 'dd/MM/yyyy' }}
               </p>
 
               <p *ngIf="descripcion.tipoNovedadCodigo == '3'">
@@ -206,7 +209,7 @@
 
               <section *ngIf="descripcion.tipoNovedadCodigo === '5'">
                 <section *ngFor="let clausula of descripcion?.novedadContractualClausula; let i = index">
-                  <mat-card-title class="header-card--text sub-text"> 
+                  <mat-card-title class="header-card--text sub-text">
                     Cláusula {{ i + 1 }}
                   </mat-card-title>
                   <p><strong>Cláusula a modificar: </strong></p>
