--- a/asivamosffie.web/asivamosffie/src/app/_pages/validar-solicitud-novedades/components/ver-detalle-solic-nov-obra/ver-detalle-solic-nov-obra.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/validar-solicitud-novedades/components/ver-detalle-solic-nov-obra/ver-detalle-solic-nov-obra.component.html
@@ -7,7 +7,6 @@
     </div>
     <h1 class="title-menu--h1">Ver detalle validación de solicitud de novedad {{ novedad.numeroSolicitud }}</h1>
     <p class="info-sub-title">
-      Número de contrato
       <b>
         Número de contrato <b>{{ novedad.contrato.numeroContrato }}</b>
       </b>
@@ -18,6 +17,10 @@
       <mat-card-title class="header-card--text"> Datos del contrato </mat-card-title>
     </mat-card-header>
     <mat-card-content>
+      <p>
+        <strong> Número del contrato: </strong>
+        {{ novedad?.contrato.numeroContrato }}
+      </p>
       <p>
         <strong> Nombre del contratista: </strong>
         {{ novedad.contrato.contratacion.contratista.nombre }}
@@ -40,7 +43,7 @@
       </p>
       <p>
         <strong>Valor del contrato:</strong>
-        <span>{{ (novedad.contrato?.contratacion?.disponibilidadPresupuestal?.length > 0 ? 
+        <span>{{ (novedad.contrato?.contratacion?.disponibilidadPresupuestal?.length > 0 ?
           novedad.contrato?.contratacion?.disponibilidadPresupuestal[0]?.valorSolicitud : 0 ) | currency: '':'symbol':'3.0' }}</span>
       </p>
       <p>
@@ -171,7 +174,7 @@
               <p *ngIf="descripcion.tipoNovedadCodigo == '4'">
                 <strong>Plazo adicional días: </strong> {{ descripcion.plazoAdicionalDias }}
               </p>
-              
+
               <p *ngIf="descripcion.tipoNovedadCodigo == '1' || descripcion.tipoNovedadCodigo == '2' || descripcion.tipoNovedadCodigo == '6'">
                 <strong>
                   Fecha de inicio
@@ -200,7 +203,7 @@
 
               <section *ngIf="descripcion.tipoNovedadCodigo === '5'">
                 <section *ngFor="let clausula of descripcion?.novedadContractualClausula; let i = index">
-                  <mat-card-title class="header-card--text sub-text"> 
+                  <mat-card-title class="header-card--text sub-text">
                     Cláusula {{ i + 1 }}
                   </mat-card-title>
                   <p><strong>Cláusula a modificar: </strong></p>
