--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-solicitud-novedad-contractual/components/registrar-solicitud/registrar-solicitud.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-solicitud-novedad-contractual/components/registrar-solicitud/registrar-solicitud.component.html
@@ -98,6 +98,10 @@
     </mat-card-header>
     <mat-card-content>
       <p>
+        <strong>Número del contrato:</strong>
+        {{ contrato?.numeroContrato }}
+      </p>
+      <p>
         <strong>Nombre del contratista:</strong>
         {{ contrato?.contratacion?.contratista?.nombre }}
       </p>
