--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-solicitud-novedad-contractual/components/ver-detalle/ver-detalle.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-solicitud-novedad-contractual/components/ver-detalle/ver-detalle.component.html
@@ -21,6 +21,10 @@
     </mat-card-header>
     <mat-card-content>
       <p>
+        <strong>Número del contrato:</strong>
+        {{ novedad.contrato?.numeroContrato }}
+      </p>
+      <p>
         <strong>
           Nombre del contratista:
         </strong>
@@ -188,7 +192,7 @@
 
                 <section *ngIf="descripcion.tipoNovedadCodigo === '5'">
                   <section *ngFor="let clausula of descripcion?.novedadContractualClausula; let i = index;">
-                    <mat-card-title class="header-card--text sub-text"> 
+                    <mat-card-title class="header-card--text sub-text">
                       Cláusula {{ i + 1 }}
                     </mat-card-title>
                     <p><strong>Cláusula a modificar: </strong> </p>
@@ -260,9 +264,9 @@
           </strong>
           Sí
         </p>
-        <section 
+        <section
                         [innerHTML]="novedad.observacionDevolucion.observaciones"
-                        
+
                 ></section>
       </mat-card-content>
     </mat-card>
@@ -282,10 +286,10 @@
         </strong>
       </p>
       <div>
-          <section 
+          <section
             class="text-justify"
             [innerHTML]="novedad.causaRechazo"
-            
+
     ></section>
       </div>
     </mat-card-content>
