--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-tramite-controversias-contractuales/components/form-registrar-controvrs-accord/form-registrar-controvrs-accord.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-tramite-controversias-contractuales/components/form-registrar-controvrs-accord/form-registrar-controvrs-accord.component.html
@@ -372,7 +372,7 @@
                                   (addressForm.get('procedeSolicitud').invalid && estaEditando)
                               }">¿La solicitud procede?</label>
                         </div>
-                        <div class="col">
+                        <div>
                             <mat-radio-group class="radioInput" formControlName="procedeSolicitud" required>
                                 <mat-radio-button [value]="true">Sí</mat-radio-button>
                                 <mat-radio-button [value]="false">No</mat-radio-button>
