--- a/asivamosffie.web/asivamosffie/src/app/_pages/fase-preconstruccion/components/form-perfil/form-perfil.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/fase-preconstruccion/components/form-perfil/form-perfil.component.html
@@ -309,7 +309,6 @@
                       [matDatepicker]="fechaAprobacion"
                       formControlName="fechaAprobacion"
                       [min]="fechaAprobacionPoliza"
-                      [max]="minDate"
                       placeholder="DD/MM/AAAA"
                       required
                       readonly
@@ -321,6 +320,7 @@
                           i
                         )
                       "
+                      (click)="fechaAprobacion.open()"
                     />
                     <mat-datepicker #fechaAprobacion></mat-datepicker>
                   </mat-form-field>
