--- a/asivamosffie.web/asivamosffie/src/app/_pages/reportes/component/contrato/ejecucion-financiera/ejecucion-financiera.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/reportes/component/contrato/ejecucion-financiera/ejecucion-financiera.component.html
@@ -175,7 +175,7 @@
               <tr class="mat-header-row cdk-header-row ng-star-inserted">
                 <th class="mat-header-cell cdk-header-cell ng-star-inserted">Componente</th>
                 <th class="mat-header-cell cdk-header-cell ng-star-inserted">Total comprometido</th>
-                <th class="mat-header-cell cdk-header-cell ng-star-inserted">Facturado antes de impuestos</th>
+                <th class="mat-header-cell cdk-header-cell ng-star-inserted">Facturado</th>
                 <th class="mat-header-cell cdk-header-cell ng-star-inserted">Saldo</th>
                 <th class="mat-header-cell cdk-header-cell ng-star-inserted">Porcentaje de ejecución presupuestal</th>
               </tr>
