--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-solicitud-liquidacion-contractual/components/ver-ejecucion-financiera/ver-ejecucion-financiera.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-solicitud-liquidacion-contractual/components/ver-ejecucion-financiera/ver-ejecucion-financiera.component.html
@@ -68,7 +68,7 @@
                 Total comprometido
               </th>
               <th class="mat-header-cell cdk-header-cell ng-star-inserted">
-                Facturado antes de impuestos
+                Facturado
               </th>
               <th class="mat-header-cell cdk-header-cell ng-star-inserted">
                 Saldo
