--- a/asivamosffie.web/asivamosffie/src/app/_pages/verificar-preconstruccion/components/form-perfil/form-perfil.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/verificar-preconstruccion/components/form-perfil/form-perfil.component.html
@@ -303,9 +303,9 @@
           <div class="row">
             <div class="col-md-8">
               <div class="row">
-                <div class="pr-1 mt-1em">
+                <div class="pr-1">
                   <label
-                    class="lable-left"
+                    class="label-left"
                     for="fechaAprobacion"
                     [class.color-secondaryColor]="
                       (perfil.get('fechaAprobacion').invalid && perfil.get('fechaAprobacion').touched) ||
@@ -333,6 +333,7 @@
                           i
                         )
                       "
+                      (click)="fechaAprobacion.open()"
                     />
                     <mat-datepicker #fechaAprobacion></mat-datepicker>
                   </mat-form-field>
