--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/verdetalle-editar-solicitud-pago/verdetalle-editar-solicitud-pago.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/verdetalle-editar-solicitud-pago/verdetalle-editar-solicitud-pago.component.html
@@ -98,7 +98,7 @@
                 <td mat-cell *matCellDef="let element" align="center">{{ element.numeroDrp }}</td>
               </ng-container>
               <ng-container matColumnDef="ProyectoLLaveMen">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header>ProyectoLLaveMen</th>
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Nombre proyecto</th>
                 <!-- <td mat-cell *matCellDef="let element" align="center"> {{ element.numeroDRP }} </td> -->
                 <td mat-cell *matCellDef="let element">
                   <div
@@ -110,7 +110,7 @@
                 </td>
               </ng-container>
               <ng-container matColumnDef="NombreUso">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header>NombreUso</th>
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Nombre uso</th>
                 <td mat-cell *matCellDef="let element" style="padding: 0 !important">
                   <div
                     class="sub-item-table justify-content-center align-items-center"
@@ -133,7 +133,7 @@
                   >
                     <div *ngFor="let el2 of el.listDyUsos; let j = index" class="borber-table">
                       <div class="sub-item-table--element">
-                        {{ el2.valorUso }}
+                        ${{ el2.valorUso }}
                       </div>
                     </div>
                   </div>
@@ -148,7 +148,7 @@
                   >
                     <div *ngFor="let el2 of el.listDyUsos; let j = index" class="borber-table">
                       <div class="sub-item-table--element">
-                        {{ el2.saldo }}
+                        ${{ el2.saldo }}
                       </div>
                     </div>
                   </div>
