Fase-2-Paquete-5 Fix dowload manged performances added visitas and incoporated performances

--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-rendimientos/components/gestionar-rendimientos/gestionar-rendimientos.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-rendimientos/components/gestionar-rendimientos/gestionar-rendimientos.component.html
@@ -75,7 +75,7 @@
                     </button>
                     <button mat-raised-button color="accent" class="btn-table" 
                         *ngIf="element.pendienteAprobacion"
-                        (click)="downloadInconsistencies(element.cargaPagosRendimientosId)"
+                        (click)="downloadConsistencies(element.cargaPagosRendimientosId)"
                         >
                         Ver registros consistentes
                     </button>
