--- a/asivamosffie.web/asivamosffie/src/app/_pages/comite-tecnico/components/tabla-registrar-validacion-solicitudes-contractiales/tabla-registrar-validacion-solicitudes-contractiales.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/comite-tecnico/components/tabla-registrar-validacion-solicitudes-contractiales/tabla-registrar-validacion-solicitudes-contractiales.component.html
@@ -30,7 +30,11 @@
     <ng-container matColumnDef="requiereVotacion">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>¿El tema requería votación?</th>
       <td mat-cell *matCellDef="let element">
-        <div class="col">
+        <div *ngIf="esVerDetalle === true">
+          <span *ngIf="element.requiereVotacion === true">Sí</span>
+          <span *ngIf="element.requiereVotacion !== true">No</span>
+        </div>
+        <div class="col" *ngIf="esVerDetalle !== true">
           <mat-radio-group class="radioInput en-proceso" [(ngModel)]="element.requiereVotacion">
             <mat-radio-button [value]="true" (change)="changeRequiere(true, element)"> Sí </mat-radio-button>
             <mat-radio-button
@@ -54,9 +58,9 @@
           color="accent"
           class="btn-table"
           (click)="openDialogValidacionSolicitudes(element)"
-          [class.info-button]="element.requiereVotacion"
-          [class.sin-diligenciar]="!element.completo && element.requiereVotacion"
-          [class.completo]="element.completo && element.requiereVotacion"
+          [class.info-button]="element.requiereVotacion && esVerDetalle !== true"
+          [class.sin-diligenciar]="!element.completo && element.requiereVotacion && esVerDetalle !== true"
+          [class.completo]="element.completo && element.requiereVotacion && esVerDetalle !== true"
           [disabled]="!element.requiereVotacion"
         >
           Votar
