--- a/asivamosffie.web/asivamosffie/src/app/_pages/comite-tecnico/components/votacion-solicitud/votacion-solicitud.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/comite-tecnico/components/votacion-solicitud/votacion-solicitud.component.html
@@ -35,11 +35,17 @@
                 <!-- <section class="example-section">
                   <mat-checkbox formControlName="aprobacion"></mat-checkbox>
                 </section> -->
-                <mat-radio-group class="radioInput" formControlName="aprobacion">
-                  <mat-radio-button [value]="true">Sí</mat-radio-button>
-                  <mat-radio-button [value]="false">No</mat-radio-button>
-                </mat-radio-group>
-                <span class="required-form-group">*</span>
+                <div *ngIf="data.esVerDetalle === true">
+                  <span *ngIf="addressForm.get('aprobacion').value === true">Sí</span>
+                  <span *ngIf="addressForm.get('aprobacion').value !== true">No</span>
+                </div>
+                <div *ngIf="data.esVerDetalle !== true">
+                  <mat-radio-group class="radioInput" formControlName="aprobacion">
+                    <mat-radio-button [value]="true">Sí</mat-radio-button>
+                    <mat-radio-button [value]="false">No</mat-radio-button>
+                  </mat-radio-group>
+                  <span class="required-form-group">*</span>
+                </div>
                 <span class="icon-incompleto">
                   <img
                     class="icon-incompleto--img"
