--- a/asivamosffie.web/asivamosffie/src/app/_pages/comite-tecnico/components/votacion-tema/votacion-tema.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/comite-tecnico/components/votacion-tema/votacion-tema.component.html
@@ -34,11 +34,17 @@
                 <!-- <section class="example-section">
                   <mat-checkbox formControlName=""></mat-checkbox>
                 </section> -->
-                <mat-radio-group class="radioInput" formControlName="aprobacion" required>
-                  <mat-radio-button [value]="true">Sí</mat-radio-button>
-                  <mat-radio-button [value]="false">No</mat-radio-button>
-                </mat-radio-group>
-                <span class="required-form-group">*</span>
+                <div *ngIf="data.esVerDetalle === true">
+                  <span *ngIf="addressForm.get('aprobacion').value === true">Sí</span>
+                  <span *ngIf="addressForm.get('aprobacion').value !== true">No</span>
+                </div>
+                <div *ngIf="data.esVerDetalle !== true">
+                  <mat-radio-group class="radioInput" formControlName="aprobacion" required>
+                    <mat-radio-button [value]="true">Sí</mat-radio-button>
+                    <mat-radio-button [value]="false">No</mat-radio-button>
+                  </mat-radio-group>
+                  <span class="required-form-group">*</span>
+                </div>
               </td>
               <!-- <td class="mat-cell cdk-cell ng-star-inserted">
                 <section class="example-section">
