--- a/asivamosffie.web/asivamosffie/src/assets/scss/_general.scss
+++ b/asivamosffie.web/asivamosffie/src/assets/scss/_general.scss
@@ -49,7 +49,7 @@ strong {
     width: 71rem;
     
     mat-drawer-content & {
-      width: 53rem;
+      width: calc(100vw - 26em);
     }
   }
 }
@@ -427,4 +427,8 @@ input[type='number']::-webkit-outer-spin-button {
 
 .d-none {
   display: none !important;
+}
+
+iframe {
+  border: none;
 }
