--- a/asivamosffie.web/asivamosffie/src/app/_pages/comite-tecnico/components/registrar-sesion-comite-tecnico/registrar-sesion-comite-tecnico.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/comite-tecnico/components/registrar-sesion-comite-tecnico/registrar-sesion-comite-tecnico.component.html
@@ -95,7 +95,7 @@
         >
           Registrar participantes
         </a>
-        <a *ngIf="esVerDetalle !== true && esRegistroNuevo === true"
+        <a *ngIf="esVerDetalle !== true && esRegistroNuevo !== true"
           routerLink="verDetalleEditarParticipantes"
           [disabled]="!cargoRegistro"
           mat-raised-button color="accent"
