--- a/asivamosffie.web/asivamosffie/src/app/_pages/comite-tecnico/components/form-proposiciones-varios/form-proposiciones-varios.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/comite-tecnico/components/form-proposiciones-varios/form-proposiciones-varios.component.html
@@ -214,191 +214,33 @@
       <mat-card-title class="header-card--text"> Proposiciones y varios </mat-card-title>
     </mat-card-header>
     <mat-card-content>
-      <div formGroupName="tema">
+      <div>
         <div *ngFor="let temas of tema.controls; let i = index">
-          <div [formGroupName]="i">
+          <div>
             <mat-card-title class="header-card--text pl-0 alineacion-titulos2"> Tema {{ i + 1 }} </mat-card-title>
             <div class="row">
-              <div class="pr-1">
-                <label
-                  class="label-left"
-                  for="tema"
-                  [class.color-secondaryColor]="
-                    (temas.get('tema')?.invalid && temas.get('tema').touched) ||
-                    (temas.get('tema')?.invalid && estaEditando)
-                  "
-                >
-                  Tema
-                </label>
-              </div>
-              <div class="col d-flex">
-                <mat-form-field class="full-width">
-                  <input matInput #temaInput type="text" formControlName="tema" maxlength="1000" required />
-                  <input type="hidden" formControlName="sesionTemaId" />
-                </mat-form-field>
-                <span
-                  class="contador miles"
-                  [matTooltipPosition]="'above'"
-                  matTooltip="Campo alfanumérico"
-                  matTooltipClass="info-tooltip"
-                >
-                  {{ 1000 - temaInput.value.length }}
-                </span>
-                <span class="icon-incompleto">
-                  <img
-                    class="icon-incompleto--img"
-                    src="assets/img/icon/incompleto.svg"
-                    alt="este campo es requerido"
-                    [matTooltipPosition]="'above'"
-                    matTooltip="Debe ingresar la información en el campo para continuar"
-                    matTooltipClass="info-tooltip"
-                    *ngIf="
-                    (temas.get('tema')?.invalid && temas.get('tema').touched) ||
-                    (temas.get('tema')?.invalid && estaEditando)
-                    "
-                  />
-                </span>
-              </div>
+              <p>
+                <strong> Tema: </strong>
+                {{ temas.get('tema').value }}
+              </p>
             </div>
             <div class="row">
-              <div class="col-md-8">
-                <div class="row">
-                  <div class="pr-1">
-                    <label
-                      class="label-left"
-                      for="responsable"
-                      [class.color-secondaryColor]="
-                        (temas.get('responsable')?.invalid && temas.get('responsable').touched) ||
-                        (temas.get('responsable')?.invalid && estaEditando)
-                      "
-                    >
-                      Responsable
-                    </label>
-                  </div>
-                  <div class="col">
-                    <mat-form-field class="select-width">
-                      <mat-select formControlName="responsable" required>
-                        <mat-option *ngFor="let responsable of listaMiembros" [value]="responsable">
-                          {{ responsable.nombre }}
-                        </mat-option>
-                      </mat-select>
-                    </mat-form-field>
-                  </div>
-                  <span class="icon-incompleto">
-                    <img
-                      class="icon-incompleto--img"
-                      src="assets/img/icon/incompleto.svg"
-                      alt="este campo es requerido"
-                      [matTooltipPosition]="'above'"
-                      matTooltip="Debe ingresar la información en el campo para continuar"
-                      matTooltipClass="info-tooltip"
-                      *ngIf="
-                        (temas.get('responsable')?.invalid && temas.get('responsable').touched) ||
-                        (temas.get('responsable')?.invalid && estaEditando)
-                      "
-                    />
-                  </span>
-                </div>
-              </div>
+              <p>
+                <strong> Responsable: </strong>
+                {{ temas.get('responsable').value?.nombre }}
+              </p>
             </div>
             <div class="row">
-              <div class="col-md-8">
-                <div class="row">
-                  <div class="pr-1">
-                    <label
-                      class="label-left"
-                      for="tiempoIntervencion"
-                      [class.color-secondaryColor]="
-                        (temas.get('tiempoIntervencion')?.invalid &&
-                          temas.get('tiempoIntervencion').touched) ||
-                        (temas.get('tiempoIntervencion')?.invalid && estaEditando)
-                      "
-                    >
-                      Tiempo de intervención <b class="minutos">Minutos</b>
-                    </label>
-                  </div>
-                  <div class="col d-flex">
-                    <mat-form-field class="full-width">
-                      <input
-                        matInput
-                        #tiempoIntervencion
-                        type="number"
-                        formControlName="tiempoIntervencion"
-                        maxlength="3"
-                        min="1"
-                        max="999"
-                        required
-                        (keypress)="validateNumberKeypress($event)"
-                        onKeyPress="if(this.value.length>=this.maxLength) return false;"
-                        oninput="if (this.value.length > this.maxLength) this.value = this.value.slice(0, this.maxLength);"
-                      />
-                    </mat-form-field>
-                    <span
-                      class="contador"
-                      [matTooltipPosition]="'above'"
-                      matTooltip="Campo numérico"
-                      matTooltipClass="info-tooltip"
-                    >
-                      {{ 3 - tiempoIntervencion.value.length }}
-                    </span>
-                    <span class="icon-incompleto">
-                      <img
-                        class="icon-incompleto--img"
-                        src="assets/img/icon/incompleto.svg"
-                        alt="este campo es requerido"
-                        [matTooltipPosition]="'above'"
-                        matTooltip="Debe ingresar la información en el campo para continuar"
-                        matTooltipClass="info-tooltip"
-                        *ngIf="
-                          (temas.get('tiempoIntervencion')?.invalid &&
-                            temas.get('tiempoIntervencion').touched) ||
-                          (temas.get('tiempoIntervencion')?.invalid && estaEditando)
-                        "
-                      />
-                    </span>
-                  </div>
-                </div>
-              </div>
+              <p>
+                <strong> Tiempo de intervención: </strong>
+                {{ temas.get('tiempoIntervencion').value }} Minutos
+              </p>
             </div>
             <div class="row">
-              <div class="pr-1">
-                <label
-                  class="label-left"
-                  for="url"
-                  [class.color-secondaryColor]="
-                    (temas.get('url')?.invalid && temas.get('url').touched) ||
-                    (temas.get('url')?.invalid && estaEditando)
-                  "
-                >
-                  URL con soporte
-                </label>
-              </div>
-              <div class="col">
-                <mat-form-field class="full-width">
-                  <input matInput type="url" required formControlName="url" maxlength="1000" />
-                </mat-form-field>
-                <span class="info-url">Indique la ruta del soporte de esta información</span>
-              </div>
-              <span class="icon-incompleto pr-3em">
-                <img
-                  class="icon-incompleto--img"
-                  src="assets/img/icon/incompleto.svg"
-                  alt="este campo es requerido"
-                  [matTooltipPosition]="'above'"
-                  matTooltip="Debe ingresar la información en el campo para continuar"
-                  matTooltipClass="info-tooltip"
-                  *ngIf="
-                    (temas.get('url')?.invalid && temas.get('url').touched) ||
-                    (temas.get('url')?.invalid && estaEditando)
-                  "
-                />
-              </span>
-            </div>
-            <div class="text-right" *ngIf="tema.controls.length > 0">
-              <button mat-button color="warn" type="button" class="btn-eliminar" (click)="eliminarTema(i)">
-                <img src="assets/img/icon/menos.svg" alt="Eliminar vigencia" />
-                Eliminar tema
-              </button>
+              <p>
+                <strong> URL con soporte: </strong>
+                {{ temas.get('url')?.value }}
+              </p>
             </div>
           </div>
         </div>
