--- a/asivamosffie.web/asivamosffie/src/app/_pages/comite-tecnico/components/form-registrar-participantes/form-registrar-participantes.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/comite-tecnico/components/form-registrar-participantes/form-registrar-participantes.component.html
@@ -219,9 +219,14 @@
     </div>
   </form>
   <div *ngIf="esVerDetalle === true">
-    <p>
-      <strong>Miembros participantes:</strong><span>{{ miembros }} </span>
-    </p>
+    <div class="row px-miembros mt-2em mb-2em">
+      <div class="pr-1">
+        <label
+          class="label-left">
+          Miembros participantes: <span>{{ miembros }} </span>
+        </label>
+      </div>
+    </div>
     <mat-card class="shipping-card var-main-gris" >
       <mat-card-header class="header-card header-card--margin">
         <mat-card-title class="header-card--text"> Invitados </mat-card-title>
