--- a/asivamosffie.web/asivamosffie/src/app/_pages/comite-tecnico/components/tabla-registrar-otros-temas/tabla-registrar-otros-temas.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/comite-tecnico/components/tabla-registrar-otros-temas/tabla-registrar-otros-temas.component.html
@@ -46,7 +46,8 @@
         <ng-container matColumnDef="id">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Gestión </th>
             <td mat-cell *matCellDef="let element">
-                <button mat-raised-button
+                <button *ngIf="esVerDetalle !== true"
+                    mat-raised-button
                     color="accent"
                     class="btn-table"
                     (click)="openDialogValidacionSolicitudes( element )"
@@ -54,7 +55,18 @@
                     [class.sin-diligenciar]="!element.completo && element.requiereVotacion && esVerDetalle !== true"
                     [class.completo]="element.completo && element.requiereVotacion && esVerDetalle !== true"
                     [disabled]="!element.requiereVotacion"
-                >Votar </button>
+                >
+                Votar
+                </button>
+                <button *ngIf="esVerDetalle === true"
+                  mat-raised-button
+                  color="accent"
+                  class="btn-table"
+                  (click)="openDialogValidacionSolicitudes( element )"
+                  [disabled]="!element.requiereVotacion"
+                >
+                Ver votación
+              </button>
             </td>
         </ng-container>
 
