--- a/asivamosffie.web/asivamosffie/src/app/_pages/comite-tecnico/components/tabla-registrar-validacion-solicitudes-contractiales/tabla-registrar-validacion-solicitudes-contractiales.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/comite-tecnico/components/tabla-registrar-validacion-solicitudes-contractiales/tabla-registrar-validacion-solicitudes-contractiales.component.html
@@ -54,6 +54,7 @@
       <th mat-header-cell *matHeaderCellDef mat-sort-header>Gestión</th>
       <td mat-cell *matCellDef="let element">
         <button
+          *ngIf="esVerDetalle !== true"
           mat-raised-button
           color="accent"
           class="btn-table"
@@ -65,6 +66,16 @@
         >
           Votar
         </button>
+        <button
+          *ngIf="esVerDetalle === true"
+          mat-raised-button
+          color="accent"
+          class="btn-table"
+          (click)="openDialogValidacionSolicitudes(element)"
+          [disabled]="!element.requiereVotacion"
+        >
+        Ver votación
+      </button>
       </td>
     </ng-container>
 
