--- a/asivamosffie.web/asivamosffie/src/app/_pages/comite-tecnico/components/votacion-solicitud-multiple/votacion-solicitud-multiple.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/comite-tecnico/components/votacion-solicitud-multiple/votacion-solicitud-multiple.component.html
@@ -3,7 +3,7 @@
 </button>
 
 <div class="text-center">
-  <h1 class="title-menu--h1">Votación solicitud {{ data.sesionComiteSolicitud.numeroSolicitud }}</h1>
+  <h1 class="title-menu--h1">Votación solicitud{{ data.sesionComiteSolicitud.numeroSolicitud }}</h1>
 
   <p>
     <span class="mx-1em">{{ data.sesionComiteSolicitud.fechaSolicitud | date: 'dd/MM/yyyy' }}</span>
@@ -34,6 +34,7 @@
                 <!-- <section class="example-section">
                   <mat-checkbox formControlName="aprobacion"></mat-checkbox>
                 </section> -->
+                {{ data.esVerDetalle }}
                 <div *ngIf="data.esVerDetalle === true">
                   <span *ngIf="addressForm.get('aprobacion').value === true">Sí</span>
                   <span *ngIf="addressForm.get('aprobacion').value !== true">No</span>
